# swagger.yaml
@@ -337,7 +337,7 @@ paths:
     patch:
       tags:
         - User Related Operations
-      summary: User Can Signup using this path
+      summary: User Can Update the Profile Photo
       consumes:
         - application/json
       producers:
@@ -371,6 +371,223 @@ paths:
                         type: string
         "422":
           description: Unprocessable.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string
+
+  /addoffer:
+    post:
+      tags:
+        - Offer / Session Related Operations
+      summary: Counsellor can Add Offer Time Should be in 24hrs format eg- 05:20
+      consumes:
+        - application/json
+      producers:
+        - application/json
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                license:
+                  type: string
+                description:
+                  type: string
+                workingDays:
+                  type: string
+                fromTime:
+                  type: string
+                toTime:
+                  type: string
+                expertise:
+                  type: string
+                experience:
+                  type: string
+                price:
+                  type: string
+
+      responses:
+        "200":
+          description: All Good
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                title:
+                  type: string
+                license:
+                  type: string
+                description:
+                  type: string
+                workingDays:
+                  type: string
+                fromTime:
+                  type: string
+                toTime:
+                  type: string
+                expertise:
+                  type: string
+                experience:
+                  type: string
+                price:
+                  type: string
+        "422":
+          description: Some Error Occured
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                success:
+                  type: string
+                error:
+                  type: string
+
+  /getcounselloroffer:
+    get:
+      tags:
+        - Offer / Session Related Operations
+      summary: Get Offer Detail.
+      responses:
+        "200":
+          description: All Good
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                title:
+                  type: string
+                license:
+                  type: string
+                description:
+                  type: string
+                workingDays:
+                  type: string
+                fromTime:
+                  type: string
+                toTime:
+                  type: string
+                expertise:
+                  type: string
+                experience:
+                  type: string
+                price:
+                  type: string
+        "422":
+          description: Some Error Occured.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string
+
+  /deleteoffer:
+    delete:
+      tags:
+        - Offer / Session Related Operations
+      summary: Delete The Offer.
+      responses:
+        "200":
+          description: All Good
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                success:
+                  type: boolean
+                message:
+                  type: string
+        "422":
+          description: Some Error Occured.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  error:
+                    type: string
+
+  /updateoffer:
+    patch:
+      tags:
+        - Offer / Session Related Operations
+      summary: Counsellor can Update the Offer
+      consumes:
+        - application/json
+      producers:
+        - application/json
+      requestBody:
+        # required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                license:
+                  type: string
+                description:
+                  type: string
+                workingDays:
+                  type: string
+                fromTime:
+                  type: string
+                toTime:
+                  type: string
+                expertise:
+                  type: string
+                experience:
+                  type: string
+                price:
+                  type: string
+      responses:
+        "200":
+          description: All Good
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                title:
+                  type: string
+                license:
+                  type: string
+                description:
+                  type: string
+                workingDays:
+                  type: string
+                fromTime:
+                  type: string
+                toTime:
+                  type: string
+                expertise:
+                  type: string
+                experience:
+                  type: string
+                price:
+                  type: string
+        "422":
+          description: Some Error Occured.
           content:
             application/json:
               schema:
